fixed row alignment to justify-content: center

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,7 @@ header nav {
     flex-direction: row;
     align-items: center;
     background-color: #444444;
-    justify-content: space-around;
-    /* width: 80%; */
+    justify-content: space-evenly;
     height: 100px;
     margin-bottom: 15px;
 }
@@ -22,10 +21,8 @@ header nav a{
 .row {
     display: flex;
     flex-direction: row;
-    /* justify-content: space-evenly; */
-    align-items: center;
-    /* width: 100%; */
-    border: 1px solid red;
+    justify-content: center;
+    /* border: 1px solid red; */
   }
 
 .row img {
@@ -33,16 +30,16 @@ header nav a{
     flex-direction: row;
     align-items: center;
     margin: 15px;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
 .column {
     display: flex;
     flex-direction: column;
     margin: 15px;
-    border: 1px solid green;
     width: 450px;
     height: 400px;
+    /* border: 1px solid green; */
 }
 
 .column h3 {
@@ -52,12 +49,15 @@ header nav a{
 .column p {
     font-style: italic;
     line-height: 150%;
-    overflow: scroll;
+    overflow-y: scroll; /* overflow assist from Stacy Yuu (https://github.com/stacyyuu/wireframe-exercise/blob/main/style.css) */
     overflow-x: hidden;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .column button {
-    width: 150px;
+    width: 200px;
+    height: 40px;
     background-color: black;
     color: white;
     cursor: pointer;
@@ -68,7 +68,6 @@ header nav a{
     background-color: white;
     color: black;
     transition: 350ms;
-    border-radius: 5px;
 }
 
 footer div{
